--- a/.github/workflows/docs-ci.yml
+++ b/.github/workflows/docs-ci.yml
@@ -22,6 +22,6 @@ jobs:
       run: v doctor
     - name: Validate docs
       run: |
-        v install jware-solution.vgura
+        v install jware-solutions.vgura
         cd vgura
         v check-md .
