--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout vgura
         uses: actions/checkout@v2
         with:
-          path: vgura
+          path: gura
       - name: Build V
         run: |
           make
@@ -25,12 +25,12 @@ jobs:
         run: v doctor
       - name: Build docs
         run: |
-          rm -f ./vgura/README.md
-          mv ./vgura/static/DOCS.md ./vgura/README.md
-          v doc -m -f html vgura/
-          mv ./vgura/_docs/vgura.html ./vgura/_docs/index.html
+          rm -f ./gura/README.md
+          mv ./gura/static/DOCS.md ./gura/README.md
+          v doc -m -f html gura/
+          mv ./gura/_docs/gura.html ./gura/_docs/index.html
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./vgura/_docs/
+          publish_dir: ./gura/_docs/
