--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,76 @@
-name: Build and Test with deps
-on: [push, pull_request]
+name: Gura Continuous Integration
+
+concurrency:
+  group: ci-${{ github.event.number }}
+  cancel-in-progress: true
+
+on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+  schedule:
+    - cron: "31 1,12 * * *"
+
+  push:
+
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  ubuntu:
+  validate-docs:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Latest V
+      - name: Checkout Gura
         uses: actions/checkout@v2
         with:
-          repository: vlang/v
-      - name: Checkout vgura
-        uses: actions/checkout@v2
+          path: gura
+
+      - name: Setup V
+        uses: vlang/setup-v@v1
         with:
-          path: vgura
-      - name: Build V
-        run: |
-          make
-          sudo ./v symlink
+          check-latest: true
+
       - name: V doctor
         run: v doctor
-      - name: Move vgura source code to V Modules
-        run: mv ./vgura ~/.vmodules/gura
-      - name: Execute Tests
+
+      - name: Install Gura and dependencies
+        run: |
+          sudo apt-get install --quiet -y --no-install-recommends gfortran liblapacke-dev libopenblas-dev libgc-dev
+      - name: Copy Gura source code to V Modules
+        run: cp -rf ./gura ~/.vmodules
+
+      - name: Validate Docs
+        run: |
+          cd ./gura
+          v check-md .
+  ci:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-18.04, macos-latest, windows-latest]
+
+    steps:
+      - name: Checkout Gura
+        uses: actions/checkout@v2
+        with:
+          path: gura
+
+      - name: Setup V
+        uses: vlang/setup-v@v1
+        with:
+          check-latest: true
+
+      - name: V doctor
+        run: v doctor
+
+      - name: Install Gura and dependencies
+        run: |
+          sudo apt-get install --quiet -y --no-install-recommends gfortran liblapacke-dev libopenblas-dev libgc-dev
+      - name: Move Gura source code to V Modules
+        run: mv ./gura ~/.vmodules
+
+      - name: Execute Tests using Pure V Backend
         run: ~/.vmodules/gura/bin/test
