--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           rm -f ./gura/README.md
           mv ./gura/static/DOCS.md ./gura/README.md
-          v doc -m -f html ./gura
-          mv ./gura/_docs/gura.html ./gura/_docs/index.html
+          v doc -readme -m -f html gura/
+
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
