--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -25,9 +25,11 @@ jobs:
 
       - name: Build docs
         run: |
-          rm -f ./gura/README.md
-          mv ./gura/static/DOCS.md ./gura/README.md
-          v doc -readme -m -f html gura/
+          pushd gura
+          rm -f README.md
+          mv static/DOCS.md README.md
+          v doc -readme -m -f html .
+          popd
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
