--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, macos-latest]
+        os: [ubuntu-latest, ubuntu-20.04, macos-latest]
 
     steps:
       - name: Checkout Gura
